--- a/config/manifest.json
+++ b/config/manifest.json
@@ -1,24 +1,24 @@
 {
-  "home.js": "/public/js/home.b229dd63.js",
-  "layout.js": "/public/js/layout.73adaf19.js",
-  "common.js": "/public/js/common.4a3de7b0.js",
-  "img/logo.png": "/public/img/logo.3cd934bb.png",
-  "vendor.js": "/public/js/vendor.fdf6c92f.js",
+  "home.js": "/public/js/home.js",
+  "layout.js": "/public/js/layout.js",
+  "common.js": "/public/js/common.js",
+  "img/logo.png": "/public/img/logo.png",
+  "vendor.js": "/public/js/vendor.js",
   "deps": {
     "home.js": {
-      "js": ["/public/js/vendor.fdf6c92f.js", "/public/js/common.4a3de7b0.js", "/public/js/home.b229dd63.js"],
+      "js": ["/public/js/vendor.js", "/public/js/common.js", "/public/js/home.js"],
       "css": []
     },
     "layout.js": {
-      "js": ["/public/js/vendor.fdf6c92f.js", "/public/js/common.4a3de7b0.js", "/public/js/layout.73adaf19.js"],
+      "js": ["/public/js/vendor.js", "/public/js/common.js", "/public/js/layout.js"],
       "css": []
     },
     "common.js": {
-      "js": ["/public/js/common.4a3de7b0.js", "/public/js/common.4a3de7b0.js"],
+      "js": ["/public/js/common.js", "/public/js/common.js"],
       "css": []
     },
     "vendor.js": {
-      "js": ["/public/js/common.4a3de7b0.js", "/public/js/vendor.fdf6c92f.js"],
+      "js": ["/public/js/common.js", "/public/js/vendor.js"],
       "css": []
     }
   },
