--- a/package.json
+++ b/package.json
@@ -150,7 +150,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn fix && lint-staged && git add ."
+      "pre-commit": "yarn fix && lint-staged && yarn build:prod && git add ."
     }
   },
   "lint-staged": {
